@@ -65,3 +65,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 - removed: delete subcircuit with the delete key
     - can be readded as a feature
 - fix to allow changing the name of an external connector
+- fixed graphical glitches with external components; caused by a painter used for taking font metrics
